# mrs-harris

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  generate_history.py  history_sql.txt  new_cookie.txt  parse_transcript.py  test_ui.sh
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs
crates/common/src/models/: calendar.rs  dag.rs  job.rs  mod.rs  notification.rs  run.rs  space.rs  step_flow.rs  user.rs  worker.rs
crates/controller/: Cargo.toml
crates/controller/migrations/: 20260522000001_initial.sql  20260523000002_worker_definitions.sql  20260524000001_job_history.sql  20260524000002_add_spaces.sql  20260525000001_seed_test_job_runs.sql  20260525000002_fix_invalid_space_uuids.sql  20260525000003_add_config_version_to_runs.sql  20260525000004_seed_test_job_runs.sql  20260526000001_add_job_history_id_to_runs.sql  20260526000002_drop_worker_type.sql  20260526000003_rename_logs_run_id.sql  20260526000004_refactor_workers_schema.sql  20260526000005_add_controller_worker_type.sql  20260526000006_seed_controller_test_data.sql  20260527000001_add_run_number_to_job_runs.sql  20260527000002_modify_run_number_type.sql  20260528000001_enforce_job_run_history_id.sql  20260529000001_add_job_logs_external_event_id.sql  20260529000002_backfill_terminal_run_timestamps.sql  20260529000003_add_job_run_log_archive_metadata.sql  20260529000004_add_scheduler_leases.sql  20260601000001_remove_controller_worker_type.sql  20260601000002_normalize_local_echo_history_seed.sql  20260602000001_add_space_priority.sql  20260603000001_worker_definition_history_and_remove_status.sql  20260603000002_pin_worker_definition_history_to_runs_and_workers.sql  20260605000001_step_flows_and_remove_dag.sql
crates/controller/src/: app.rs  main.rs
crates/controller/src/api/: auth.rs  calendar.rs  callback.rs  health.rs  jobs.rs  logs.rs  mod.rs  runs.rs  workers.rs
crates/controller/src/db/: jobs.rs  leases.rs  logs.rs  mod.rs  notifications.rs  runs.rs  step_flows.rs  users.rs  workers.rs
crates/controller/src/import/: mod.rs
crates/controller/src/log_archive/: mod.rs
crates/controller/src/log_ingestion/: cloudwatch.rs  locator.rs  mod.rs
crates/controller/src/notification/: email.rs  mod.rs  slack.rs
crates/controller/src/scheduler/: archive_worker.rs  cron_trigger.rs  dag_engine.rs  dispatcher.rs  mod.rs  reaper.rs  retry_manager.rs  step_flow_engine.rs
crates/controller/src/web/: auth.rs  calendar.rs  dashboard.rs  database.rs  jobs.rs  mod.rs  runs.rs  settings.rs  spaces.rs  step_flows.rs  worker_definitions.rs  workers.rs
crates/controller/src/worker_manager/: controller_worker.rs  fargate.rs  lambda.rs  local_fallback.rs  mod.rs
crates/controller/templates/: base.html  calendar.html  dashboard.html  database.html  login.html  settings.html  workers.html
crates/controller/templates/components/: breadcrumbs.html  dashboard_live.html  diff_compare_modal.html  table.html  workers_live.html
crates/controller/templates/jobs/: detail.html  form.html  history_table.html  list.html  list_partial.html  list_update.html  runs_table.html
crates/controller/templates/runs/: detail.html  detail_live.html
crates/controller/templates/spaces/: detail.html  form.html  list.html
crates/controller/templates/step_flows/: detail.html  form.html  list.html  list_partial.html  list_update.html  run_detail.html
crates/worker/: Cargo.toml
crates/worker/src/: executor.rs  lib.rs  log_capture.rs  main.rs  reporter.rs
(+41 files in other folders)
