[package]
name = "mrs-harris-worker"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mrs-harris-worker"
path = "src/main.rs"

[lib]
name = "mrs_harris_worker"
path = "src/lib.rs"


[dependencies]
mrs-harris-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
clap = { version = "4", features = ["derive"] }
